[gd_scene load_steps=3 format=3 uid="uid://bk6c8uxti8v3i"]

[ext_resource type="Script" uid="uid://cn1edkhn34i1t" path="res://demo.gd" id="1_5hfv0"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fr1sm"]

[node name="Demo" type="Node2D"]
script = ExtResource("1_5hfv0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 331.0
offset_bottom = 117.0
theme_override_constants/separation = 10

[node name="play_sequence" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "play_sequence"

[node name="play_random" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "play_random"

[node name="play_by_name" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/icon_max_width = 32
text = "play_by_name"
icon = SubResource("CompressedTexture2D_fr1sm")

[connection signal="pressed" from="VBoxContainer/play_sequence" to="." method="_on_play_sequence_pressed"]
[connection signal="pressed" from="VBoxContainer/play_random" to="." method="_on_play_random_pressed"]
[connection signal="pressed" from="VBoxContainer/play_by_name" to="." method="_on_play_by_name_pressed"]
